Refs #119540 avoid extra space from assessment section headers

--- a/eea/design/skins/eeadesign_styles/scss-theme/theme/_content_core.scss
+++ b/eea/design/skins/eeadesign_styles/scss-theme/theme/_content_core.scss
@@ -8,6 +8,12 @@
     margin-top: $h1-font-size;
   }
 
+  /* avoid extra space from assessment section headers */
+  h2 + h3,
+  h3 + h4 {
+    margin-top: 0 !important;
+  }
+
   p {
     font-size: $p-font-size;
   }
